--- a/gui/main_window.ui
+++ b/gui/main_window.ui
@@ -84,7 +84,7 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>320</y>
+      <y>400</y>
       <width>55</width>
       <height>16</height>
      </rect>
@@ -97,7 +97,7 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>380</y>
+      <y>460</y>
       <width>101</width>
       <height>16</height>
      </rect>
@@ -168,16 +168,19 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>340</y>
+      <y>420</y>
       <width>160</width>
       <height>22</height>
      </rect>
     </property>
+    <property name="minimum">
+     <number>9000</number>
+    </property>
     <property name="maximum">
-     <number>100</number>
+     <number>9999</number>
     </property>
     <property name="value">
-     <number>99</number>
+     <number>9900</number>
     </property>
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
@@ -188,12 +191,18 @@
     <property name="invertedControls">
      <bool>false</bool>
     </property>
+    <property name="tickPosition">
+     <enum>QSlider::TicksAbove</enum>
+    </property>
+    <property name="tickInterval">
+     <number>100</number>
+    </property>
    </widget>
    <widget class="QComboBox" name="comboBox_cooling_schedule">
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>400</y>
+      <y>480</y>
       <width>81</width>
       <height>22</height>
      </rect>
@@ -251,6 +260,9 @@
       <height>22</height>
      </rect>
     </property>
+    <property name="maximum">
+     <number>100</number>
+    </property>
     <property name="value">
      <number>50</number>
     </property>
@@ -262,6 +274,12 @@
     </property>
     <property name="invertedControls">
      <bool>false</bool>
+    </property>
+    <property name="tickPosition">
+     <enum>QSlider::TicksAbove</enum>
+    </property>
+    <property name="tickInterval">
+     <number>10</number>
     </property>
    </widget>
    <widget class="QLabel" name="label_room_availability">
@@ -286,6 +304,9 @@
       <height>22</height>
      </rect>
     </property>
+    <property name="maximum">
+     <number>100</number>
+    </property>
     <property name="value">
      <number>50</number>
     </property>
@@ -298,6 +319,12 @@
     <property name="invertedControls">
      <bool>false</bool>
     </property>
+    <property name="tickPosition">
+     <enum>QSlider::TicksAbove</enum>
+    </property>
+    <property name="tickInterval">
+     <number>10</number>
+    </property>
    </widget>
    <widget class="QSlider" name="horizontalSlider_matrix_transposition">
     <property name="geometry">
@@ -307,6 +334,9 @@
       <width>160</width>
       <height>22</height>
      </rect>
+    </property>
+    <property name="maximum">
+     <number>100</number>
     </property>
     <property name="value">
      <number>10</number>
@@ -319,6 +349,12 @@
     </property>
     <property name="invertedControls">
      <bool>false</bool>
+    </property>
+    <property name="tickPosition">
+     <enum>QSlider::TicksAbove</enum>
+    </property>
+    <property name="tickInterval">
+     <number>10</number>
     </property>
    </widget>
    <widget class="QSlider" name="horizontalSlider_matrix_inner_translation">
@@ -330,6 +366,9 @@
       <height>22</height>
      </rect>
     </property>
+    <property name="maximum">
+     <number>100</number>
+    </property>
     <property name="value">
      <number>10</number>
     </property>
@@ -341,6 +380,12 @@
     </property>
     <property name="invertedControls">
      <bool>false</bool>
+    </property>
+    <property name="tickPosition">
+     <enum>QSlider::TicksAbove</enum>
+    </property>
+    <property name="tickInterval">
+     <number>10</number>
     </property>
    </widget>
    <widget class="QLabel" name="label_matrix_inner_translation">
@@ -397,6 +442,9 @@
       <height>22</height>
      </rect>
     </property>
+    <property name="maximum">
+     <number>100</number>
+    </property>
     <property name="value">
      <number>80</number>
     </property>
@@ -409,8 +457,14 @@
     <property name="invertedControls">
      <bool>false</bool>
     </property>
+    <property name="tickPosition">
+     <enum>QSlider::TicksAbove</enum>
+    </property>
+    <property name="tickInterval">
+     <number>10</number>
+    </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_run">
+   <widget class="QPushButton" name="pushButton_apply">
     <property name="geometry">
      <rect>
       <x>640</x>
@@ -420,7 +474,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>RUN</string>
+     <string>APPLY</string>
     </property>
    </widget>
    <widget class="QSpinBox" name="spinBox_tmax">
@@ -462,56 +516,191 @@
      <number>5</number>
     </property>
    </widget>
-   <widget class="QSlider" name="horizontalSlider_lecturer_availability_2">
+   <widget class="QSpinBox" name="spinBox_iter_max">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>350</y>
+      <width>101</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="maximum">
+     <number>1000000</number>
+    </property>
+    <property name="value">
+     <number>1000</number>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_iter_max">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>330</y>
+      <width>55</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>iter max</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_cost">
     <property name="geometry">
      <rect>
       <x>530</x>
-      <y>220</y>
-      <width>191</width>
-      <height>61</height>
-     </rect>
-    </property>
-    <property name="acceptDrops">
-     <bool>false</bool>
-    </property>
-    <property name="autoFillBackground">
-     <bool>false</bool>
-    </property>
-    <property name="value">
-     <number>50</number>
-    </property>
-    <property name="orientation">
-     <enum>Qt::Horizontal</enum>
-    </property>
-    <property name="invertedAppearance">
-     <bool>false</bool>
-    </property>
-    <property name="invertedControls">
-     <bool>false</bool>
-    </property>
-    <property name="tickPosition">
-     <enum>QSlider::TicksAbove</enum>
-    </property>
-    <property name="tickInterval">
-     <number>0</number>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_test">
-    <property name="geometry">
-     <rect>
-      <x>590</x>
-      <y>170</y>
+      <y>90</y>
       <width>81</width>
-      <height>61</height>
+      <height>16</height>
      </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>11</pointsize>
-     </font>
     </property>
     <property name="text">
-     <string>TextLabel</string>
+     <string>cost function</string>
+    </property>
+   </widget>
+   <widget class="QCheckBox" name="checkBox_unbalanced_function">
+    <property name="geometry">
+     <rect>
+      <x>530</x>
+      <y>110</y>
+      <width>141</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>unbalanced function</string>
+    </property>
+    <property name="checked">
+     <bool>true</bool>
+    </property>
+    <property name="tristate">
+     <bool>false</bool>
+    </property>
+   </widget>
+   <widget class="QCheckBox" name="checkBox_gaps_c_function">
+    <property name="geometry">
+     <rect>
+      <x>530</x>
+      <y>140</y>
+      <width>141</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>gaps c function</string>
+    </property>
+    <property name="checked">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QCheckBox" name="checkBox_lecturer_work_time">
+    <property name="geometry">
+     <rect>
+      <x>530</x>
+      <y>170</y>
+      <width>161</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>lecturer work time</string>
+    </property>
+    <property name="checked">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QCheckBox" name="checkBox_late_lectures_cost_function">
+    <property name="geometry">
+     <rect>
+      <x>530</x>
+      <y>200</y>
+      <width>161</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>late lectures cost function</string>
+    </property>
+    <property name="checked">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_alpha_procent">
+    <property name="geometry">
+     <rect>
+      <x>190</x>
+      <y>420</y>
+      <width>51</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>0.99</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_matrix_cut_and_paste_translation_procent">
+    <property name="geometry">
+     <rect>
+      <x>440</x>
+      <y>400</y>
+      <width>51</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>80 %</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_matrix_inner_translation_procent">
+    <property name="geometry">
+     <rect>
+      <x>440</x>
+      <y>340</y>
+      <width>51</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>10 %</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_matrix_transposition_procent">
+    <property name="geometry">
+     <rect>
+      <x>440</x>
+      <y>280</y>
+      <width>51</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>10 %</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_room_availability_procent">
+    <property name="geometry">
+     <rect>
+      <x>440</x>
+      <y>170</y>
+      <width>51</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>50 %</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_lecturer_availability_procent">
+    <property name="geometry">
+     <rect>
+      <x>440</x>
+      <y>110</y>
+      <width>51</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>50 %</string>
     </property>
    </widget>
   </widget>
