--- a/gui/main_window.ui
+++ b/gui/main_window.ui
@@ -42,7 +42,7 @@
     <property name="geometry">
      <rect>
       <x>100</x>
-      <y>140</y>
+      <y>230</y>
       <width>55</width>
       <height>16</height>
      </rect>
@@ -58,7 +58,7 @@
     <property name="geometry">
      <rect>
       <x>100</x>
-      <y>200</y>
+      <y>290</y>
       <width>55</width>
       <height>16</height>
      </rect>
@@ -71,7 +71,7 @@
     <property name="geometry">
      <rect>
       <x>100</x>
-      <y>260</y>
+      <y>350</y>
       <width>55</width>
       <height>16</height>
      </rect>
@@ -84,7 +84,7 @@
     <property name="geometry">
      <rect>
       <x>100</x>
-      <y>400</y>
+      <y>490</y>
       <width>55</width>
       <height>16</height>
      </rect>
@@ -97,7 +97,7 @@
     <property name="geometry">
      <rect>
       <x>100</x>
-      <y>460</y>
+      <y>110</y>
       <width>101</width>
       <height>16</height>
      </rect>
@@ -110,7 +110,7 @@
     <property name="geometry">
      <rect>
       <x>100</x>
-      <y>80</y>
+      <y>170</y>
       <width>31</width>
       <height>16</height>
      </rect>
@@ -123,7 +123,7 @@
     <property name="geometry">
      <rect>
       <x>100</x>
-      <y>100</y>
+      <y>190</y>
       <width>73</width>
       <height>22</height>
      </rect>
@@ -168,7 +168,7 @@
     <property name="geometry">
      <rect>
       <x>100</x>
-      <y>420</y>
+      <y>510</y>
       <width>160</width>
       <height>22</height>
      </rect>
@@ -202,11 +202,19 @@
     <property name="geometry">
      <rect>
       <x>100</x>
-      <y>480</y>
+      <y>130</y>
       <width>101</width>
       <height>21</height>
      </rect>
     </property>
+    <property name="currentText">
+     <string>---- wybierz ----</string>
+    </property>
+    <item>
+     <property name="text">
+      <string>---- wybierz ----</string>
+     </property>
+    </item>
     <item>
      <property name="text">
       <string>exponential</string>
@@ -465,6 +473,9 @@
     </property>
    </widget>
    <widget class="QPushButton" name="pushButton_apply">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
       <x>890</x>
@@ -478,10 +489,13 @@
     </property>
    </widget>
    <widget class="QSpinBox" name="spinBox_kmax">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
       <x>100</x>
-      <y>280</y>
+      <y>370</y>
       <width>101</width>
       <height>31</height>
      </rect>
@@ -493,14 +507,17 @@
      <number>200</number>
     </property>
     <property name="value">
-     <number>5</number>
+     <number>1</number>
+    </property>
+    <property name="displayIntegerBase">
+     <number>10</number>
     </property>
    </widget>
    <widget class="QSpinBox" name="spinBox_iter_max">
     <property name="geometry">
      <rect>
       <x>100</x>
-      <y>350</y>
+      <y>440</y>
       <width>101</width>
       <height>31</height>
      </rect>
@@ -516,7 +533,7 @@
     <property name="geometry">
      <rect>
       <x>100</x>
-      <y>330</y>
+      <y>420</y>
       <width>55</width>
       <height>16</height>
      </rect>
@@ -609,7 +626,7 @@
     <property name="geometry">
      <rect>
       <x>270</x>
-      <y>420</y>
+      <y>510</y>
       <width>51</width>
       <height>21</height>
      </rect>
@@ -700,13 +717,19 @@
     </property>
    </widget>
    <widget class="QDoubleSpinBox" name="doubleSpinBox_tmax">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
       <x>100</x>
-      <y>160</y>
+      <y>250</y>
       <width>101</width>
       <height>31</height>
      </rect>
+    </property>
+    <property name="readOnly">
+     <bool>false</bool>
     </property>
     <property name="decimals">
      <number>1</number>
@@ -721,14 +744,17 @@
      <double>0.100000000000000</double>
     </property>
     <property name="value">
-     <double>20.000000000000000</double>
+     <double>0.100000000000000</double>
     </property>
    </widget>
    <widget class="QDoubleSpinBox" name="doubleSpinBox_tmin">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
       <x>100</x>
-      <y>220</y>
+      <y>310</y>
       <width>101</width>
       <height>31</height>
      </rect>
@@ -746,7 +772,7 @@
      <double>0.100000000000000</double>
     </property>
     <property name="value">
-     <double>5.000000000000000</double>
+     <double>0.100000000000000</double>
     </property>
    </widget>
   </widget>
@@ -756,7 +782,7 @@
      <x>0</x>
      <y>0</y>
      <width>1088</width>
-     <height>21</height>
+     <height>26</height>
     </rect>
    </property>
   </widget>
