gui_default_parameters_update

--- a/gui/main_window.ui
+++ b/gui/main_window.ui
@@ -507,7 +507,7 @@
      <number>1</number>
     </property>
     <property name="maximum">
-     <number>200</number>
+     <number>1000000</number>
     </property>
     <property name="value">
      <number>1</number>
@@ -738,13 +738,13 @@
      <bool>false</bool>
     </property>
     <property name="decimals">
-     <number>1</number>
+     <number>3</number>
     </property>
     <property name="minimum">
-     <double>0.100000000000000</double>
+     <double>0.001000000000000</double>
     </property>
     <property name="maximum">
-     <double>200.000000000000000</double>
+     <double>1000000.000000000000000</double>
     </property>
     <property name="singleStep">
      <double>0.100000000000000</double>
@@ -766,13 +766,13 @@
      </rect>
     </property>
     <property name="decimals">
-     <number>1</number>
+     <number>3</number>
     </property>
     <property name="minimum">
-     <double>0.100000000000000</double>
+     <double>0.001000000000000</double>
     </property>
     <property name="maximum">
-     <double>200.000000000000000</double>
+     <double>1000000.000000000000000</double>
     </property>
     <property name="singleStep">
      <double>0.100000000000000</double>
